tests/baselines/reference/typePredicateTopLevelTypeParameter.errors.txt
typePredicateTopLevelTypeParameter.ts(10,10): error TS99999: Function was inferred to be a type guard


==== typePredicateTopLevelTypeParameter.ts (1 errors) ====
    // Repro from #51980
    
    function getPermissions(user: string) {
        if (user === 'Jack') return 'admin';
        return undefined;
    }
    
    const admins = ['Mike', 'Joe'].map(e => getPermissions(e));
    
    function isDefined<T>(a: T | undefined): a is T {
             ~~~~~~~~~
!!! error TS99999: Function was inferred to be a type guard
        return a !== undefined;
    }
    
    const foundAdmins = admins.filter(isDefined);  // "admin"[]
    